# learning_letters

./: .gitignore  LICENSE  README.md
backend/: .env.example  .flake8  STROKE_AUDIT.md  alembic.ini  bandit.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260124_000001_initial_auth_tables.py  20260125_000002_add_mode_to_progress.py
backend/app/: __init__.py  deps.py  main.py  scripts.py
backend/app/core/: config.py  database.py  security.py
backend/app/data/: .gitignore
backend/app/fonts/strokes/: nunito.json  patrick-hand.json
backend/app/models/: __init__.py  progress.py  refresh_token.py  settings.py  user.py
backend/app/routers/: auth.py  characters.py  progress.py  scoring.py  user_settings.py
backend/app/services/: audio_generator.py  font_strokes.py  guide_cache.py  scoring.py  trace_generator.py
backend/app/static/references/: .gitkeep
backend/scripts/: approve_word_images.py  generate_word_images.py
backend/tests/: test_audio_generator.py  test_font_strokes.py  test_guide_cache.py  test_routers.py  test_scoring.py  test_trace_generator.py
frontend/: .env.example  MOBILE_BUILD_GUIDE.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend-standalone/: .gitignore  README.md  capacitor.config.ts  index.html  package.json  vite.config.ts  vitest.config.ts
frontend-standalone/public/: manifest.webmanifest
frontend-standalone/public/strokes/: fredoka.json  playwrite-us.json  schoolbell.json
frontend-standalone/src/: App.vue  env.d.ts  main.ts  test-setup.ts
frontend-standalone/src/components/: AudioCaption.vue  CharacterSelection.vue  DrawingCanvas.vue  MultiplayerResultsDisplay.vue  MultiplayerSetupWizard.vue  ResultsDisplay.vue  SettingsPanel.vue
frontend-standalone/src/components/__tests__/: AudioCaption.test.ts
frontend-standalone/src/composables/: useAudioCaptions.ts
frontend-standalone/src/composables/__tests__/: useAudioCaptions.test.ts
frontend-standalone/src/services/: audio.ts  scoring.ts  storage.ts
frontend-standalone/src/services/__tests__/: audio.test.ts  storage.test.ts
frontend-standalone/src/wasm-scoring/: Cargo.toml
frontend-standalone/src/wasm-scoring/src/: image_ops.rs  lib.rs  scoring.rs
frontend/src/: App.vue  style.css
frontend/src/components/: AudioCaption.vue  AuthModal.vue  CharacterSelection.vue  DrawingCanvas.vue  MultiplayerResultsDisplay.vue  MultiplayerSetupWizard.vue  ResultsDisplay.vue  SettingsPanel.vue  UserMenu.vue
frontend/src/composables/: useAudioCaptions.ts  useAuth.ts  useSync.ts
frontend/src/config/: api.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/tests/: setup.ts
frontend/tests/components/: CharacterSelection.spec.ts  MultiplayerResultsDisplay.spec.ts  ResultsDisplay.spec.ts  SettingsPanel.spec.ts
frontend/tests/utils/: helpers.spec.ts
