[tool.poetry]
name = "learning-letters-api"
version = "0.1.0"
description = "FastAPI backend for kids alphabet and number learning app"
authors = ["Developer"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pillow = "^10.2.0"
numpy = "^1.26.0"
scikit-image = "^0.22.0"
python-multipart = "^0.0.6"
gtts = "^2.5.0"
pydub = "^0.25.0"
elevenlabs = "^1.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.26.0"

[tool.poetry.scripts]
letters = "app.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
