[package]
name = "learning-letters-scoring"
version = "0.1.0"
edition = "2021"
description = "WASM-based scoring engine for Learning Letters"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["console", "ImageData"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1.7", optional = true }

# Image processing
image = { version = "0.25", default-features = false, features = ["png"] }
imageproc = "0.24"
rusttype = "0.9"

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[profile.release]
opt-level = 3
lto = true
